# laurent-laporte-pro.github.io

./: .gitignore  404.html  LICENCE.md  README.md  gulpfile.js  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml
assets/: profile-laurent-laporte.png.xcf
css/: resume.css  resume.min.css
de/: index.html
docs/: de.md  en.md  fr.md  index.md
docs/assets/: profile-laurent-laporte.png.xcf
docs/de/: index.md
docs/en/: index.md
docs/fr/: index.md
en/: index.html
fr/: index.html
search/: search_index.json
src/laurent_laporte_pro_github_io/: __about__.py  __init__.py  change_address.py  position_dates.py  sort_luminess.py  technical_env.py
stylesheets/: extra.css
