[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laurent-laporte-pro-github-io"
dynamic = ["version"]
description = 'Static website to present my résumé'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Laurent LAPORTE", email = "laurent.laporte.pro@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Laurent LAPORTE/laurent-laporte-pro-github-io#readme"
Issues = "https://github.com/Laurent LAPORTE/laurent-laporte-pro-github-io/issues"
Source = "https://github.com/Laurent LAPORTE/laurent-laporte-pro-github-io"

[tool.hatch.version]
path = "src/laurent_laporte_pro_github_io/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/laurent_laporte_pro_github_io tests}"

[tool.coverage.run]
source_pkgs = ["laurent_laporte_pro_github_io", "tests"]
branch = true
parallel = true
omit = [
  "src/laurent_laporte_pro_github_io/__about__.py",
]

[tool.coverage.paths]
laurent_laporte_pro_github_io = ["src/laurent_laporte_pro_github_io", "*/laurent-laporte-pro-github-io/src/laurent_laporte_pro_github_io"]
tests = ["tests", "*/laurent-laporte-pro-github-io/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
